# rwconfig

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: autofix.yml  deploy.yml  test.yml
docs/: api.md  formats.md  guide.md  index.md
docs/.vitepress/: config.mts
fixtures/: test.config.json  test.config.toml  test.config.yaml
scripts/: packageName.mjs
src/: config.rs  error.rs  format.rs  lib.rs  main.rs  path.rs
tests/: integration_test.rs
