[package]
name = "packageName"
version = "0.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A template for creating a crate package"
readme = "README.md"
homepage = "https://github.com/betterhyq/packageName"
repository = "https://github.com/betterhyq/packageName.git"
license = "MIT"
keywords = [""]
categories = ["development-tools"]

[[bin]]
name = "packageName"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11"
