[package]
name = "rwconfig"
version = "1.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "Read/write config files with get/set and dirty-tracking; save() writes all changes at once"
readme = "README.md"
homepage = "https://github.com/un-rust/rwconfig"
repository = "https://github.com/un-rust/rwconfig.git"
license = "MIT"
keywords = ["config", "json", "yaml", "toml"]
categories = ["development-tools"]

[[bin]]
name = "rwconfig"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11"
c12-parser = "1.0.1"
serde_json = "1.0"
