[package]
name = "rwconfig"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "Read/write config files with get/set and dirty-tracking; save() writes all changes at once"
documentation = "https://docs.rs/rwconfig"
readme = "README.md"
homepage = "https://github.com/un-rust/rwconfig"
repository = "https://github.com/un-rust/rwconfig"
license = "Apache-2.0"
keywords = [ "config", "json", "yaml", "toml" ]
categories = [ "development-tools" ]
rust-version = "1.93.1"

[dependencies]
urlogger = "1.1.2"
